Completed all Customer and Seller Logic
Updated:
Customer Logic, Add to Cart, View Orders, View Order History
Seller Logic,